<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:alpha="0.2"
        android:contentDescription="@string/ferris_wheel_decoration_cd"
        android:src="@drawable/ferriswheel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        tools:context=".activities.AddNewFavPlaceActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="@dimen/four_dp_dimen">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_current_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/place_photo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:adjustViewBounds="true"
                android:background="@color/placeholderBackground"
                android:contentDescription="@string/place_photo_thumbnail_cd"
                android:src="@drawable/ic_photo_36dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/place_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/enter_fav_place_name_hint"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:textColor="@color/colorFont"
                android:textCursorDrawable="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary"
                android:paddingTop="@dimen/four_dp_dimen"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@drawable/add_fav_place_button_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/add_fav_place_button_icon_border"
                android:contentDescription="@string/take_photo_icon_cd"
                android:padding="12dp"
                android:src="@drawable/ic_add_photo_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/default_margin"
                android:paddingEnd="@dimen/double_default_margin"
                android:paddingLeft="4dp"
                android:paddingRight="@dimen/double_default_margin"
                android:paddingStart="4dp"
                android:paddingTop="@dimen/default_margin"
                android:text="@string/take_photo_tv"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_fav_place_button_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/add_fav_place_button_icon_border"
                android:contentDescription="@string/save_place_icon_cd"
                android:padding="12dp"
                android:src="@drawable/ic_save_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/default_margin"
                android:paddingEnd="@dimen/double_default_margin"
                android:paddingLeft="4dp"
                android:paddingRight="@dimen/double_default_margin"
                android:paddingStart="4dp"
                android:paddingTop="@dimen/default_margin"
                android:text="@string/save_location_tv"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/map_current_position"
        app:layout_anchorGravity="center"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>