<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        app:elevation="@dimen/four_dp_dimen">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_six_dp_dimen"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax">

                <EditText
                    android:id="@+id/trip_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/trip_name_et_hint"
                    android:inputType="textCapSentences"
                    android:maxLength="30"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textCursorDrawable="@null"
                    app:backgroundTint="@color/colorPrimary" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.12"
        android:contentDescription="@string/add_new_trip_background_cd"
        android:src="@drawable/suitcase" />

    <TextView
        android:id="@+id/create_trip_empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/double_default_margin"
        android:layout_marginRight="@dimen/double_default_margin"
        android:layout_marginTop="96dp"
        android:text="@string/create_trip_empty_view"
        android:textColor="@color/colorDarkFont"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            android:id="@+id/autocomplete_fragment_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/four_dp_dimen">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/create_trip_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="@dimen/default_margin"
            android:scrollbars="vertical" />


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_trip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save_24dp"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:contentDescription="@string/save_new_trip_fab_cd"/>

</android.support.design.widget.CoordinatorLayout>